--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
   </head>
     <body>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -29,17 +30,22 @@
                     
                     </div>
                   </nav>
+<div class="portfolio">
+    <h1>Portfolio</h1>
+</div>
 
-            <div class="container">
+            <div id="main-container" class="container">
                     <div class="row">
                       <div class="col-sm-6">
                           <div class="thumbnail">
-                            <img class="img-responsive" src="images/my-zakk.jpg" alt="Zakk Guitar" height="200" width="200">
+                            <img class="img-responsive" src="images/my-zakk.jpg" alt="Zakk Guitar" height="200" width="200" >
+                            <h3>Zakk</h3>
                           </div>
                       </div>
                       <div class="col-sm-6">
                             <div class="thumbnail">
                                 <img class="img-responsive" src="images/golf-picture.jpg" alt="Golfy" height="200" width="200">
+                                <h3>Golfington</h3>
                             </div>
                     </div>
                 </div>
@@ -47,30 +53,25 @@
                       <div class="col-sm-6">
                           <div class="thumbnail">
                               <img class="img-responsive" src="images/sports-picture.jpg" alt="Yay Sports" height="200" width="200">
+                              <h3>Yay Sports</h3>
                           </div>
                       </div>
                       <div class="col-sm-6">
                           <div class="thumbnail">
                               <img class="img-responsive" src="images/laptop.jpg" alt="Computerization" height="200" width="200">
+                              <h3>Coding Magic</h3>
                           </div>
                       </div>
                     </div>
                     <div class="row">
                             <div class="col-sm-6">
                                 <div class="thumbnail">
-                                    <img class="img-responsive" src="images/sports-picture.jpg" alt="Yay Sports" height="200" width="200">
+                                    <img class="img-responsive" src="images/aiden-golf.jpg" alt="Yay Sports" height="200" width="200">
+                                    <h3>Aiden the Beast</h3>
                                 </div>
                             </div>
-                            <div class="col-sm-6">
-                                <div class="thumbnail">
-                                    <img class="img-responsive" src="images/laptop.jpg" alt="Computerization" height="200" width="200">
-                                </div>
-                            </div>
+                            
                           </div>
-
-                    <div class="row">
-                      ...
-                    </div>
                   </div>
     </body>
 </html>
