added margins, adjusted footer, added bottom border, messed up alighment of photos

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,6 +35,7 @@
 </div>
 
             <div id="main-container" class="container">
+                <span class="border">
                     <div class="row">
                       <div class="col-sm-6">
                           <div class="thumbnail">
@@ -72,6 +73,7 @@
                             </div>
                             
                           </div>
+                        </span>
                   </div>
     </body>
 </html>
