input better contact form, somehow portfolio suddenly works

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
       <footer class="footer">
         <div class="container">
-          <span class="text-muted"> Colin Kramer</span>
+          <span> Colin Kramer</span>
         </div>
       </footer>
   </body>
