--- a/contact.html
+++ b/contact.html
@@ -34,30 +34,31 @@
               </ul>
           </div>
       </nav>
-       
+      <div id ="main-container" class ="container">
+          <section class="main-section">
+            <h1>Contact</h1>
       <form>
-            <div class="form-group row">
-              <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Email</label>
-              <div class="col-sm-10">
-                <input type="email" class="form-control form-control-sm" id="colFormLabelSm" placeholder="col-form-label-sm">
-              </div>
+          <div class="form-group">
+            <label for="exampleFormControlInput1">Name</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="John Smith">
+          </div>
+
+          <div class="form-group">
+              <label for="exampleFormControlInput1">Email address</label>
+              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="example@gmail.com">
             </div>
-            <div class="form-group row">
-              <label for="colFormLabel" class="col-sm-2 col-form-label">Email</label>
-              <div class="col-sm-10">
-                <input type="email" class="form-control" id="colFormLabel" placeholder="col-form-label">
-              </div>
-            </div>
-            <div class="form-group row">
-              <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg">Email</label>
-              <div class="col-sm-10">
-                <input type="email" class="form-control form-control-lg" id="colFormLabelLg" placeholder="col-form-label-lg">
-              </div>
-            </div>
-          </form>
+          
+          <div class="form-group">
+            <label for="exampleFormControlTextarea1">Example textarea</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="9"></textarea>
+          </div>
+        </form> 
+        <input class="btn" type="submit" value="Submit">
+      </section>
+      </div>
           <footer class="footer">
                 <div class="container">
-                  <span class="text-muted"> Colin Kramer</span>
+                  <span>Colin Kramer</span>
                 </div>
               </footer>
 </body>
