--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
       </div>
       <footer class="footer">
          <div class="container">
-            <span class="text-muted"> Colin Kramer</span>
+            <span>Colin Kramer</span>
          </div>
       </footer>
    </body>
