--- a/index.html
+++ b/index.html
@@ -42,18 +42,11 @@
       <h1>About Me</h1>
     
     <img src="images/portfoliopic07252019.jpg" class="float-left" alt="Portfolio Pic" height ="200" width="200">
-    <p>No? Alright, be that way. It's your meeting. Why don't you start talking and tell me what you want? Oh man! 50 G's? How you figure that? Partner? Oh yeah, I remember that little bitch! So you must be his daddy. Let me get this straight... I steal your dope, hmm? I beat the piss out of your mule boy, and then you walk in here, and you bring me more meth? That's a brilliant plan, ese. Brilliant. </p>
-    <P>What? What do you want?! No. Don't even tell me you're hungry. Don't go there. Hahaha! Are you mad doggin' them, Tio? What, you don't like them? One ding. That means yes. Tio don't like you. Why don't you like them, Tio? You don't trust them? Why don't you trust them, Tio? BULLSHIT! MY TIO DOES NOT LIE! </P>
-    <P>Mr. Clean and his boy. I'm sorry that I had to tune you up. Respect, ese, you gotta give it to get it. What are we doing way the hell out there, what they close the mall or something? Heisenberg come on break it out. That's it? That's all you got? I thought you was a player. 
-        </P>
-    <P>Right, but... I think your employees would agree that you need to get your financial situation in control before you can help them. No I'm just saying that, though I really do, I understand the temptation to restart the business... maybe the universe is telling you that you need to pay what you owe. 
-        </P>
-    <P>
-            Ted this affects both of us. You need to use that money to pay your bill by the end of this month, which you promised the IRS in writing that you would do. It is, that simple. What does that mean. Does that mean yes? Because I really need a yes here, Ted. From whom exactly do you think you got that six-hundred thousand, Ted? Great Aunt Bergen? Yeah. 
-    </P>
-    <P>
-            I would greatly appreciate it if you would just, help me out here. Um, he's fine. No, absolutely not and I mean to keep it that way, so. Six-hundred and seventeen thousand dollars written out to me. Uh... what is this? Well, and why is that? It feels wrong. Uh huh. Well, um... Ted, the whole reason we're in this mess is because you had me cooking your books. So, when did wrong suddenly become a problem for you? 
-    </P>
+    <p>Hey there!  My name is Colin Kramer.  I am a University of Minnesota graduate, with a bachelor of arts in political science.  I am currently a student in the University of Minnesota coding bootcamp.  I am enjoying a great opportunity to learn a mountain of information about web development.  I hope to use these skills to eventually find gainful and rewarding employment in the tech world.</p>
+
+    <p>The best part of my life is my 12 year old son Aiden.  He is brilliant, thoughtful, handsome, motivated, and just as funny as me!  He likes playing video games, making youtube videos, reading, playing with his friends and sisters, and in general being awesome.  Together we have fun playing video games, playing mini-golf, watching cartoons and movies, and lots of other cool things.</p>
+
+    <p>Besides taking the bootcamp course, I am spending my summer working part-time at both Golf Galaxy (as a cashier) and Applewood Hills Golf Course (as a pro-shop guy and bartender.)  In my freetime I like spending my time with friends and family, playing golf, reading about Mt. Everest, cheering for Gopher sports, making jokes, and sleeping.</p>
         </section>
     </div>
       <footer class="footer">
